--- a/styles.css
+++ b/styles.css
@@ -205,11 +205,9 @@ aside > .nav-content{
 @media screen and (max-width: 838px) {
     aside {
         display: none;
-        background-color: red;
+        background-color: #fff;
         position: absolute;
         left: 0.1em;
-        /* padding: 40px 18px 180px; */
-        /* margin-top: 2px; */
     }
 }
 
@@ -380,6 +378,7 @@ td {
     padding: 8px 20px;
     font: 700 11px "Roboto", sans-serif;
 }
+
 
 
 td > button{
@@ -877,54 +876,6 @@ footer > section > .items {
 }
 
 
-#api-data {
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    color: #333;
-    display: none;
-    max-height: 190px;
-    overflow-y: auto;
-    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
-}
-
-.name-item {
-    margin: 5px 0;
-    padding: 5px;
-    font: 750 12px "Roboto", sans-serif;
-    color: #5B5B5B;
-    cursor: pointer;
-    /* background-color: red; */
-}
-
-.name-item:hover {
-    background-color: #f9f9f9;
-}
-
-.close-btn {
-    cursor: pointer;
-    font-weight: bold;
-    margin-top: 3px;
-    text-align: right;
-    border-bottom: 2px solid #f9f9f9;
-}
-
-#drug-info {
-    margin-top: 20px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #f1f1f1;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    color: #333;
-    display: none;
-    max-height: 300px;
-    overflow-y: auto;
-}
 
 
 
