--- a/styles.css
+++ b/styles.css
@@ -797,6 +797,7 @@ footer > section {
     width: 1032px;
     box-shadow: 2px 4px 10px 3px rgba(0, 0, 0, 0.2);
     padding: 33px 25px;
+    width: 81%;
 }
 
 footer > section > .items {
