--- a/home.css
+++ b/home.css
@@ -92,12 +92,12 @@
     gap: 8px;
 }
 
-.containers > div:nth-child(2) > .feilds > input {
+.containers > div:nth-child(2) > .feilds > input, select {
     background-color: #fff;
     border: none;
     outline: none;
     padding: 10px;
-    font: 500 14px "Roboto", sans-serif;
+    font: 800 14px "Roboto", sans-serif;
     box-shadow: 0px 0px 8px 2px rgba(117, 116, 116, 0.25);
     border-radius: 5px;
 }
@@ -339,6 +339,9 @@ small {
     font: 500 14px "Roboto", sans-serif;
   }
 
+  /* .form-container > form > div > {
+    background-color: red;
+  } */
 
 
   .form-container > div {
@@ -358,6 +361,11 @@ small {
   }
 
   .contain {
+    display: flex;
+    gap: 5px;
+  }
+
+  .contains {
     display: flex;
     gap: 5px;
   }
@@ -394,6 +402,21 @@ small {
     border-radius: 5px;
   }
 
+  .contains > div > input {
+    width: 242px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font: 500 14px "Roboto", sans-serif;
+    box-shadow: 0px 0px 8px 2px rgba(117, 116, 116, 0.25);
+    border-radius: 5px;
+  }
+
+  .contains > div:nth-child(1) > input{
+    background-color: #E5E5E5;
+  }
+
   .contain > div > select {
     width: 263px;
   }
@@ -411,3 +434,11 @@ small {
   .form-containeer > form > button:hover {
     background-color: #a50016;
   }
+
+
+
+
+
+
+
+  
