--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     padding: 30px 24px 33px;
     margin-bottom: 21px;
     box-shadow: 0px 8px 4px -4px rgba(0, 0, 0, 0.2);
-    background-color: #A12B2B;
+    background-color: #ffffff;
     height: 80px;
 }
 
@@ -39,30 +39,25 @@ body {
 }
 
 .top-header > section:nth-child(1) > div > h1 {
-    font: 300 24px "Roboto", sans-serif;
-    /* border: 6px solid #9C3030; */
+    font: 300 28px "Roboto", sans-serif;
+    border: 6px solid #9C3030;
     background-color: #fff;
-    padding: 4px 1px;
+    padding: 4px;
     width: 140px;
     color: #9C3030;
-}
-
-.top-header > section:nth-child(2) > svg {
-    fill: #fff;
 }
 
 
 .top-header > section:nth-child(1) > div > img {
     background-color: #9C3030;
-    width: 45px;
+    width: 47.5px;
     padding: 7px;
 }
 
 .top-header > section:nth-child(1) > h2 {
     font: 700 35px "Roboto", sans-serif;
     text-transform: capitalize;
-    /* color: #5B5B5B; */
-    color: #fff;
+    color: #5B5B5B;
 }
 
 .top-header > section:nth-child(2) {
@@ -86,8 +81,8 @@ body {
     font: 700 22px "Roboto", sans-serif;
     text-transform: capitalize;
     white-space: nowrap;
-    /* color: #5B5B5B; */
-    color: #fff;
+    color: #5B5B5B;
+    
 }
 
 @media screen and (max-width: 1000px) {
@@ -187,6 +182,14 @@ aside > .nav-content{
     align-items: center;
     gap: 25px;
 }
+
+/* .container > aside > div:nth-child(1) {
+    background-color: #5B5B5B;
+    padding: 5px 10px;
+    color: #fff;
+    fill: #fff;
+    border-radius: 5px;
+} */
 
 
 .nav-content > div > p {
@@ -813,11 +816,10 @@ footer > section {
     align-items: center;
     gap: 15px;
     width: 1032px;
-    background-color: #A12B2B;
     box-shadow: 2px 4px 10px 3px rgba(0, 0, 0, 0.2);
     padding: 33px 25px;
     width: 81%;
-    color: #fff;
+    color: #5B5B5B;
 }
 
 footer > section > .items {
@@ -828,8 +830,7 @@ footer > section > .items {
 }
 
 .items > p {
-    /* border-right: 1px solid black; */
-    border-right: 1px solid #fff;
+    border-right: 1px solid black;
     padding-right: 10px;
 }
 
